pa2/solutions/aowhd4_bmsqpd/y.output
Nonterminals useless in grammar

   assign-ops


Terminals unused in grammar

   ABSTRACT
   ALIGNOF
   AS
   BE
   BREAK
   CONST
   CONTINUE
   CRATE
   DO
   EXTERN
   FINAL
   FOR
   IMPL
   IN
   MACRO
   MACRO_RULES
   MOD
   MOVE
   OFFSETOF
   OVERRIDE
   PRIV
   PUB
   PURE
   SIZEOF
   STATIC
   SELF
   SUPER
   TRAIT
   TYPE
   TYPEOF
   UNSAFE
   UNSIZED
   USE
   VIRTUAL
   WHERE
   YIELD
   POUND
   BASH
   DOLLAR
   CARAT
   DBLLEFT
   DBLRIGHT
   PLUSEQ
   MINEQ
   ASTEQ
   SLASHEQ
   PERCEQ
   AMPEQ
   BAREQ
   CARATEQ
   DBLLEFTEQ
   DBLRIGHTEQ
   ELIPSE
   DBLPER
   BOOL
   U16
   U32
   U64
   I8
   I16
   I64
   F32
   F64
   USIZE
   ISIZE
   CHAR
   STR
   LITBOOL
   UNKNOWN
   ASSIGNMENT


Rules useless in grammar

  131 assign-ops: PLUSEQ
  132           | MINEQ
  133           | ASTEQ
  134           | SLASHEQ
  135           | PERCEQ
  136           | EQUAL


Rules useless in parser due to conflicts

  102 type-list: type

  103 enum-def: ENUM ID LBRACE enum-ctor-defs RBRACE

  104 enum-ctor-defs: enum-ctor-def COMMA enum-ctor-defs
  105               | enum-ctor-def

  107 enum-ctor-def: ID

  129 compound-lit: pat-struct


State 19 conflicts: 2 reduce/reduce
State 21 conflicts: 1 reduce/reduce
State 40 conflicts: 9 reduce/reduce
State 45 conflicts: 9 reduce/reduce
State 48 conflicts: 1 shift/reduce
State 51 conflicts: 9 reduce/reduce
State 53 conflicts: 9 reduce/reduce
State 54 conflicts: 24 reduce/reduce
State 61 conflicts: 4 reduce/reduce
State 80 conflicts: 24 reduce/reduce
State 83 conflicts: 2 shift/reduce
State 84 conflicts: 2 shift/reduce
State 85 conflicts: 2 shift/reduce
State 88 conflicts: 15 shift/reduce, 9 reduce/reduce
State 122 conflicts: 1 reduce/reduce
State 124 conflicts: 1 reduce/reduce
State 130 conflicts: 4 reduce/reduce
State 140 conflicts: 15 shift/reduce
State 145 conflicts: 9 reduce/reduce
State 146 conflicts: 2 shift/reduce
State 159 conflicts: 2 shift/reduce
State 160 conflicts: 2 shift/reduce
State 161 conflicts: 2 shift/reduce
State 162 conflicts: 2 shift/reduce
State 163 conflicts: 2 shift/reduce
State 164 conflicts: 2 shift/reduce
State 165 conflicts: 2 shift/reduce
State 166 conflicts: 2 shift/reduce
State 167 conflicts: 2 shift/reduce
State 168 conflicts: 2 shift/reduce
State 169 conflicts: 2 shift/reduce
State 170 conflicts: 2 shift/reduce
State 171 conflicts: 2 shift/reduce


Grammar

    0 $accept: program "end of file"

    1 program: crate

    2 crate: items

    3 items: item items
    4      | item

    5 item: fn-def
    6     | enum-def
    7     | struct-def

    8 fn-def: FN ID LPAREN RPAREN block
    9       | FN ID LPAREN RPAREN SNGLARROW return block
   10       | FN ID LPAREN fn-params RPAREN block
   11       | FN ID LPAREN fn-params RPAREN SNGLARROW return block

   12 fn-params: fn-param COMMA fn-params
   13          | fn-param

   14 fn-param: pat-type

   15 return: type
   16       | EXCLAM

   17 enum-def: ENUM ID LBRACE enum-ctor-defs RBRACE

   18 enum-ctor-defs: enum-ctor-def COMMA enum-ctor-defs
   19               | enum-ctor-def

   20 enum-ctor-def: ID LPAREN enum-ctor-params RPAREN
   21              | ID

   22 enum-ctor-params: type COMMA enum-ctor-params
   23                 | type

   24 pat-type: pat COLON type

   25 pat: primitive-lit
   26    | name-binding
   27    | pat-deref
   28    | pat-array
   29    | pat-enum
   30    | pat-struct
   31    | UNDERSCORE
   32    | exp

   33 primitive-lit: LITDEC
   34              | LITCHAR
   35              | LITSTR

   36 name-binding: ID
   37             | MUT ID
   38             | REF ID
   39             | REF MUT ID

   40 exp: literal
   41    | ID
   42    | LPAREN exp RPAREN
   43    | exp PLUS exp
   44    | exp DASH exp
   45    | exp ASTER exp
   46    | exp SLASH exp
   47    | exp PERCENT exp
   48    | DASH exp
   49    | exp DBLAMP exp
   50    | exp DBLBAR exp
   51    | EXCLAM exp
   52    | exp LTHAN exp
   53    | exp GTHAN exp
   54    | exp LEQTHAN exp
   55    | exp GEQTHAN exp
   56    | exp DBLEQ exp
   57    | exp NOTEQ exp
   58    | AMP exp
   59    | ASTER exp
   60    | AMP MUT exp
   61    | lookup
   62    | exp LBRACK exp RBRACK
   63    | WHILE LPAREN exp RPAREN block
   64    | loop
   65    | IF LPAREN exp RPAREN block ELSE block
   66    | IF LPAREN exp RPAREN block
   67    | MATCH LPAREN exp RPAREN LBRACE arm-list RBRACE
   68    | function
   69    | BOX DBLCOL NEW LPAREN exp RPAREN
   70    | pat-struct

   71 exps: exp COMMA exps
   72     | exp

   73 lookup: lookup PERIOD ID
   74       | exp PERIOD ID

   75 function: ID LPAREN exps RPAREN
   76         | ID unit

   77 arm-list: arm-list-item COMMA arm-list
   78         | arm-list-item

   79 arm-list-item: pat-list DBLARROW block

   80 pat-list: pat BAR pat-list
   81         | pat

   82 pat-deref: AMP pat

   83 pat-array: LBRACK pats RBRACK

   84 loop: LOOP block

   85 pat-enum: ID DBLCOL ID LPAREN pats RPAREN
   86         | ID DBLCOL ID

   87 pats: pat COMMA pats
   88     | pat

   89 pat-struct: ID LBRACE id-pat-list RBRACE

   90 id-pat-list: id-pat COMMA id-pat-list
   91            | id-pat

   92 id-pat: ID COLON pat

   93 type: U8
   94     | I32
   95     | AMP type
   96     | AMP MUT type
   97     | ID
   98     | LBRACK type RBRACK
   99     | LBRACK type SEMI LITDEC RBRACK
  100     | BOX LTHAN type GTHAN

  101 type-list: type COMMA type-list
  102          | type

  103 enum-def: ENUM ID LBRACE enum-ctor-defs RBRACE

  104 enum-ctor-defs: enum-ctor-def COMMA enum-ctor-defs
  105               | enum-ctor-def

  106 enum-ctor-def: ID LPAREN type-list RPAREN
  107              | ID

  108 struct-def: STRUCT ID LBRACE type-annotations RBRACE

  109 type-annotations: type-annotation COMMA type-annotations
  110                 | type-annotation

  111 type-annotation: ID COLON type

  112 unit: LPAREN RPAREN

  113 block: LBRACE stmts RBRACE

  114 stmts: stmt stmts
  115      | stmt
  116      | exp

  117 stmt: exp SEMI
  118     | RETURN exp SEMI
  119     | RETURN SEMI
  120     | let-stmt SEMI
  121     | loop

  122 let-stmt: LET pat
  123         | LET pat COLON type EQUAL exp
  124         | LET pat EQUAL exp
  125         | LET pat COLON type

  126 literal: primitive-lit
  127        | compound-lit

  128 compound-lit: pat-enum
  129             | pat-struct
  130             | pat-array


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
ABSTRACT (258)
ALIGNOF (259)
AS (260)
BE (261)
BOX (262) 69 100
BREAK (263)
CONST (264)
CONTINUE (265)
CRATE (266)
DO (267)
ELSE (268) 65
ENUM (269) 17 103
EXTERN (270)
FINAL (271)
FN (272) 8 9 10 11
FOR (273)
IF (274) 65 66
IMPL (275)
IN (276)
LET (277) 122 123 124 125
LOOP (278) 84
MACRO (279)
MACRO_RULES (280)
MATCH (281) 67
MOD (282)
MOVE (283)
MUT (284) 37 39 60 96
OFFSETOF (285)
OVERRIDE (286)
PRIV (287)
PUB (288)
PURE (289)
REF (290) 38 39
RETURN (291) 118 119
SIZEOF (292)
STATIC (293)
SELF (294)
STRUCT (295) 108
SUPER (296)
TRAIT (297)
TYPE (298)
TYPEOF (299)
UNSAFE (300)
UNSIZED (301)
USE (302)
VIRTUAL (303)
WHERE (304)
WHILE (305) 63
YIELD (306)
DBLCOL (307) 69 85 86
SNGLARROW (308) 9 11
DBLARROW (309) 79
POUND (310)
BASH (311)
DOLLAR (312)
LBRACK (313) 62 83 98 99
RBRACK (314) 62 83 98 99
LPAREN (315) 8 9 10 11 20 42 63 65 66 67 69 75 85 106 112
RPAREN (316) 8 9 10 11 20 42 63 65 66 67 69 75 85 106 112
LBRACE (317) 17 67 89 103 108 113
RBRACE (318) 17 67 89 103 108 113
COMMA (319) 12 18 22 71 77 87 90 101 104 109
SEMI (320) 99 117 118 119 120
DASH (321) 44 48
ASTER (322) 45 59
EXCLAM (323) 16 51
PLUS (324) 43
SLASH (325) 46
PERCENT (326) 47
AMP (327) 58 60 82 95 96
BAR (328) 80
CARAT (329)
DBLLEFT (330)
DBLRIGHT (331)
DBLBAR (332) 50
DBLAMP (333) 49
DBLEQ (334) 56
NOTEQ (335) 57
LTHAN (336) 52 100
GTHAN (337) 53 100
LEQTHAN (338) 54
GEQTHAN (339) 55
PLUSEQ (340)
MINEQ (341)
ASTEQ (342)
SLASHEQ (343)
PERCEQ (344)
AMPEQ (345)
BAREQ (346)
CARATEQ (347)
DBLLEFTEQ (348)
DBLRIGHTEQ (349)
ELIPSE (350)
DBLPER (351)
EQUAL (352) 123 124
PERIOD (353) 73 74
BOOL (354)
U8 (355) 93
U16 (356)
U32 (357)
U64 (358)
I8 (359)
I16 (360)
I32 (361) 94
I64 (362)
F32 (363)
F64 (364)
USIZE (365)
ISIZE (366)
CHAR (367)
STR (368)
UNDERSCORE (369) 31
COLON (370) 24 92 111 123 125
NEW (371) 69
LITDEC (372) 33 99
LITBOOL (373)
LITCHAR (374) 34
LITSTR (375) 35
ID (376) 8 9 10 11 17 20 21 36 37 38 39 41 73 74 75 76 85 86 89 92
    97 103 106 107 108 111
UNKNOWN (377)
UMINUS (378)
DEREFERENCE (379)
MUTABLEADDR (380)
ASSIGNMENT (381)


Nonterminals, with rules where they appear

$accept (127)
    on left: 0
program (128)
    on left: 1, on right: 0
crate (129)
    on left: 2, on right: 1
items (130)
    on left: 3 4, on right: 2 3
item (131)
    on left: 5 6 7, on right: 3 4
fn-def (132)
    on left: 8 9 10 11, on right: 5
fn-params (133)
    on left: 12 13, on right: 10 11 12
fn-param (134)
    on left: 14, on right: 12 13
return (135)
    on left: 15 16, on right: 9 11
enum-def (136)
    on left: 17 103, on right: 6
enum-ctor-defs (137)
    on left: 18 19 104 105, on right: 17 18 103 104
enum-ctor-def (138)
    on left: 20 21 106 107, on right: 18 19 104 105
enum-ctor-params (139)
    on left: 22 23, on right: 20 22
pat-type (140)
    on left: 24, on right: 14
pat (141)
    on left: 25 26 27 28 29 30 31 32, on right: 24 80 81 82 87 88 92
    122 123 124 125
primitive-lit (142)
    on left: 33 34 35, on right: 25 126
name-binding (143)
    on left: 36 37 38 39, on right: 26
exp (144)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 59 60 61 62 63 64 65 66 67 68 69 70, on right: 32 42 43 44 45
    46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 62 63 65 66 67 69
    71 72 74 116 117 118 123 124
exps (145)
    on left: 71 72, on right: 71 75
lookup (146)
    on left: 73 74, on right: 61 73
function (147)
    on left: 75 76, on right: 68
arm-list (148)
    on left: 77 78, on right: 67 77
arm-list-item (149)
    on left: 79, on right: 77 78
pat-list (150)
    on left: 80 81, on right: 79 80
pat-deref (151)
    on left: 82, on right: 27
pat-array (152)
    on left: 83, on right: 28 130
loop (153)
    on left: 84, on right: 64 121
pat-enum (154)
    on left: 85 86, on right: 29 128
pats (155)
    on left: 87 88, on right: 83 85 87
pat-struct (156)
    on left: 89, on right: 30 70 129
id-pat-list (157)
    on left: 90 91, on right: 89 90
id-pat (158)
    on left: 92, on right: 90 91
type (159)
    on left: 93 94 95 96 97 98 99 100, on right: 15 22 23 24 95 96
    98 99 100 101 102 111 123 125
type-list (160)
    on left: 101 102, on right: 101 106
struct-def (161)
    on left: 108, on right: 7
type-annotations (162)
    on left: 109 110, on right: 108 109
type-annotation (163)
    on left: 111, on right: 109 110
unit (164)
    on left: 112, on right: 76
block (165)
    on left: 113, on right: 8 9 10 11 63 65 66 79 84
stmts (166)
    on left: 114 115 116, on right: 113 114
stmt (167)
    on left: 117 118 119 120 121, on right: 114 115
let-stmt (168)
    on left: 122 123 124 125, on right: 120
literal (169)
    on left: 126 127, on right: 40
compound-lit (170)
    on left: 128 129 130, on right: 127


State 0

    0 $accept: . program "end of file"

    ENUM    shift, and go to state 1
    FN      shift, and go to state 2
    STRUCT  shift, and go to state 3

    program     go to state 4
    crate       go to state 5
    items       go to state 6
    item        go to state 7
    fn-def      go to state 8
    enum-def    go to state 9
    struct-def  go to state 10


State 1

   17 enum-def: ENUM . ID LBRACE enum-ctor-defs RBRACE
  103         | ENUM . ID LBRACE enum-ctor-defs RBRACE

    ID  shift, and go to state 11


State 2

    8 fn-def: FN . ID LPAREN RPAREN block
    9       | FN . ID LPAREN RPAREN SNGLARROW return block
   10       | FN . ID LPAREN fn-params RPAREN block
   11       | FN . ID LPAREN fn-params RPAREN SNGLARROW return block

    ID  shift, and go to state 12


State 3

  108 struct-def: STRUCT . ID LBRACE type-annotations RBRACE

    ID  shift, and go to state 13


State 4

    0 $accept: program . "end of file"

    "end of file"  shift, and go to state 14


State 5

    1 program: crate .

    $default  reduce using rule 1 (program)


State 6

    2 crate: items .

    $default  reduce using rule 2 (crate)


State 7

    3 items: item . items
    4      | item .

    ENUM    shift, and go to state 1
    FN      shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 4 (items)

    items       go to state 15
    item        go to state 7
    fn-def      go to state 8
    enum-def    go to state 9
    struct-def  go to state 10


State 8

    5 item: fn-def .

    $default  reduce using rule 5 (item)


State 9

    6 item: enum-def .

    $default  reduce using rule 6 (item)


State 10

    7 item: struct-def .

    $default  reduce using rule 7 (item)


State 11

   17 enum-def: ENUM ID . LBRACE enum-ctor-defs RBRACE
  103         | ENUM ID . LBRACE enum-ctor-defs RBRACE

    LBRACE  shift, and go to state 16


State 12

    8 fn-def: FN ID . LPAREN RPAREN block
    9       | FN ID . LPAREN RPAREN SNGLARROW return block
   10       | FN ID . LPAREN fn-params RPAREN block
   11       | FN ID . LPAREN fn-params RPAREN SNGLARROW return block

    LPAREN  shift, and go to state 17


State 13

  108 struct-def: STRUCT ID . LBRACE type-annotations RBRACE

    LBRACE  shift, and go to state 18


State 14

    0 $accept: program "end of file" .

    $default  accept


State 15

    3 items: item items .

    $default  reduce using rule 3 (items)


State 16

   17 enum-def: ENUM ID LBRACE . enum-ctor-defs RBRACE
  103         | ENUM ID LBRACE . enum-ctor-defs RBRACE

    ID  shift, and go to state 19

    enum-ctor-defs  go to state 20
    enum-ctor-def   go to state 21


State 17

    8 fn-def: FN ID LPAREN . RPAREN block
    9       | FN ID LPAREN . RPAREN SNGLARROW return block
   10       | FN ID LPAREN . fn-params RPAREN block
   11       | FN ID LPAREN . fn-params RPAREN SNGLARROW return block

    BOX         shift, and go to state 22
    IF          shift, and go to state 23
    LOOP        shift, and go to state 24
    MATCH       shift, and go to state 25
    MUT         shift, and go to state 26
    REF         shift, and go to state 27
    WHILE       shift, and go to state 28
    LBRACK      shift, and go to state 29
    LPAREN      shift, and go to state 30
    RPAREN      shift, and go to state 31
    DASH        shift, and go to state 32
    ASTER       shift, and go to state 33
    EXCLAM      shift, and go to state 34
    AMP         shift, and go to state 35
    UNDERSCORE  shift, and go to state 36
    LITDEC      shift, and go to state 37
    LITCHAR     shift, and go to state 38
    LITSTR      shift, and go to state 39
    ID          shift, and go to state 40

    fn-params      go to state 41
    fn-param       go to state 42
    pat-type       go to state 43
    pat            go to state 44
    primitive-lit  go to state 45
    name-binding   go to state 46
    exp            go to state 47
    lookup         go to state 48
    function       go to state 49
    pat-deref      go to state 50
    pat-array      go to state 51
    loop           go to state 52
    pat-enum       go to state 53
    pat-struct     go to state 54
    literal        go to state 55
    compound-lit   go to state 56


State 18

  108 struct-def: STRUCT ID LBRACE . type-annotations RBRACE

    ID  shift, and go to state 57

    type-annotations  go to state 58
    type-annotation   go to state 59


State 19

   20 enum-ctor-def: ID . LPAREN enum-ctor-params RPAREN
   21              | ID .
  106              | ID . LPAREN type-list RPAREN
  107              | ID .

    LPAREN  shift, and go to state 60

    RBRACE    reduce using rule 21 (enum-ctor-def)
    RBRACE    [reduce using rule 107 (enum-ctor-def)]
    COMMA     reduce using rule 21 (enum-ctor-def)
    COMMA     [reduce using rule 107 (enum-ctor-def)]
    $default  reduce using rule 21 (enum-ctor-def)


State 20

   17 enum-def: ENUM ID LBRACE enum-ctor-defs . RBRACE
  103         | ENUM ID LBRACE enum-ctor-defs . RBRACE

    RBRACE  shift, and go to state 61


State 21

   18 enum-ctor-defs: enum-ctor-def . COMMA enum-ctor-defs
   19               | enum-ctor-def .
  104               | enum-ctor-def . COMMA enum-ctor-defs
  105               | enum-ctor-def .

    COMMA  shift, and go to state 62

    RBRACE    reduce using rule 19 (enum-ctor-defs)
    RBRACE    [reduce using rule 105 (enum-ctor-defs)]
    $default  reduce using rule 19 (enum-ctor-defs)


State 22

   69 exp: BOX . DBLCOL NEW LPAREN exp RPAREN

    DBLCOL  shift, and go to state 63


State 23

   65 exp: IF . LPAREN exp RPAREN block ELSE block
   66    | IF . LPAREN exp RPAREN block

    LPAREN  shift, and go to state 64


State 24

   84 loop: LOOP . block

    LBRACE  shift, and go to state 65

    block  go to state 66


State 25

   67 exp: MATCH . LPAREN exp RPAREN LBRACE arm-list RBRACE

    LPAREN  shift, and go to state 67


State 26

   37 name-binding: MUT . ID

    ID  shift, and go to state 68


State 27

   38 name-binding: REF . ID
   39             | REF . MUT ID

    MUT  shift, and go to state 69
    ID   shift, and go to state 70


State 28

   63 exp: WHILE . LPAREN exp RPAREN block

    LPAREN  shift, and go to state 71


State 29

   83 pat-array: LBRACK . pats RBRACK

    BOX         shift, and go to state 22
    IF          shift, and go to state 23
    LOOP        shift, and go to state 24
    MATCH       shift, and go to state 25
    MUT         shift, and go to state 26
    REF         shift, and go to state 27
    WHILE       shift, and go to state 28
    LBRACK      shift, and go to state 29
    LPAREN      shift, and go to state 30
    DASH        shift, and go to state 32
    ASTER       shift, and go to state 33
    EXCLAM      shift, and go to state 34
    AMP         shift, and go to state 35
    UNDERSCORE  shift, and go to state 36
    LITDEC      shift, and go to state 37
    LITCHAR     shift, and go to state 38
    LITSTR      shift, and go to state 39
    ID          shift, and go to state 40

    pat            go to state 72
    primitive-lit  go to state 45
    name-binding   go to state 46
    exp            go to state 47
    lookup         go to state 48
    function       go to state 49
    pat-deref      go to state 50
    pat-array      go to state 51
    loop           go to state 52
    pat-enum       go to state 53
    pats           go to state 73
    pat-struct     go to state 54
    literal        go to state 55
    compound-lit   go to state 56


State 30

   42 exp: LPAREN . exp RPAREN

    BOX      shift, and go to state 22
    IF       shift, and go to state 23
    LOOP     shift, and go to state 24
    MATCH    shift, and go to state 25
    WHILE    shift, and go to state 28
    LBRACK   shift, and go to state 29
    LPAREN   shift, and go to state 30
    DASH     shift, and go to state 32
    ASTER    shift, and go to state 33
    EXCLAM   shift, and go to state 34
    AMP      shift, and go to state 74
    LITDEC   shift, and go to state 37
    LITCHAR  shift, and go to state 38
    LITSTR   shift, and go to state 39
    ID       shift, and go to state 75

    primitive-lit  go to state 76
    exp            go to state 77
    lookup         go to state 48
    function       go to state 49
    pat-array      go to state 78
    loop           go to state 52
    pat-enum       go to state 79
    pat-struct     go to state 80
    literal        go to state 55
    compound-lit   go to state 56


State 31

    8 fn-def: FN ID LPAREN RPAREN . block
    9       | FN ID LPAREN RPAREN . SNGLARROW return block

    SNGLARROW  shift, and go to state 81
    LBRACE     shift, and go to state 65

    block  go to state 82


State 32

   48 exp: DASH . exp

    BOX      shift, and go to state 22
    IF       shift, and go to state 23
    LOOP     shift, and go to state 24
    MATCH    shift, and go to state 25
    WHILE    shift, and go to state 28
    LBRACK   shift, and go to state 29
    LPAREN   shift, and go to state 30
    DASH     shift, and go to state 32
    ASTER    shift, and go to state 33
    EXCLAM   shift, and go to state 34
    AMP      shift, and go to state 74
    LITDEC   shift, and go to state 37
    LITCHAR  shift, and go to state 38
    LITSTR   shift, and go to state 39
    ID       shift, and go to state 75

    primitive-lit  go to state 76
    exp            go to state 83
    lookup         go to state 48
    function       go to state 49
    pat-array      go to state 78
    loop           go to state 52
    pat-enum       go to state 79
    pat-struct     go to state 80
    literal        go to state 55
    compound-lit   go to state 56


State 33

   59 exp: ASTER . exp

    BOX      shift, and go to state 22
    IF       shift, and go to state 23
    LOOP     shift, and go to state 24
    MATCH    shift, and go to state 25
    WHILE    shift, and go to state 28
    LBRACK   shift, and go to state 29
    LPAREN   shift, and go to state 30
    DASH     shift, and go to state 32
    ASTER    shift, and go to state 33
    EXCLAM   shift, and go to state 34
    AMP      shift, and go to state 74
    LITDEC   shift, and go to state 37
    LITCHAR  shift, and go to state 38
    LITSTR   shift, and go to state 39
    ID       shift, and go to state 75

    primitive-lit  go to state 76
    exp            go to state 84
    lookup         go to state 48
    function       go to state 49
    pat-array      go to state 78
    loop           go to state 52
    pat-enum       go to state 79
    pat-struct     go to state 80
    literal        go to state 55
    compound-lit   go to state 56


State 34

   51 exp: EXCLAM . exp

    BOX      shift, and go to state 22
    IF       shift, and go to state 23
    LOOP     shift, and go to state 24
    MATCH    shift, and go to state 25
    WHILE    shift, and go to state 28
    LBRACK   shift, and go to state 29
    LPAREN   shift, and go to state 30
    DASH     shift, and go to state 32
    ASTER    shift, and go to state 33
    EXCLAM   shift, and go to state 34
    AMP      shift, and go to state 74
    LITDEC   shift, and go to state 37
    LITCHAR  shift, and go to state 38
    LITSTR   shift, and go to state 39
    ID       shift, and go to state 75

    primitive-lit  go to state 76
    exp            go to state 85
    lookup         go to state 48
    function       go to state 49
    pat-array      go to state 78
    loop           go to state 52
    pat-enum       go to state 79
    pat-struct     go to state 80
    literal        go to state 55
    compound-lit   go to state 56


State 35

   58 exp: AMP . exp
   60    | AMP . MUT exp
   82 pat-deref: AMP . pat

    BOX         shift, and go to state 22
    IF          shift, and go to state 23
    LOOP        shift, and go to state 24
    MATCH       shift, and go to state 25
    MUT         shift, and go to state 86
    REF         shift, and go to state 27
    WHILE       shift, and go to state 28
    LBRACK      shift, and go to state 29
    LPAREN      shift, and go to state 30
    DASH        shift, and go to state 32
    ASTER       shift, and go to state 33
    EXCLAM      shift, and go to state 34
    AMP         shift, and go to state 35
    UNDERSCORE  shift, and go to state 36
    LITDEC      shift, and go to state 37
    LITCHAR     shift, and go to state 38
    LITSTR      shift, and go to state 39
    ID          shift, and go to state 40

    pat            go to state 87
    primitive-lit  go to state 45
    name-binding   go to state 46
    exp            go to state 88
    lookup         go to state 48
    function       go to state 49
    pat-deref      go to state 50
    pat-array      go to state 51
    loop           go to state 52
    pat-enum       go to state 53
    pat-struct     go to state 54
    literal        go to state 55
    compound-lit   go to state 56


State 36

   31 pat: UNDERSCORE .

    $default  reduce using rule 31 (pat)


State 37

   33 primitive-lit: LITDEC .

    $default  reduce using rule 33 (primitive-lit)


State 38

   34 primitive-lit: LITCHAR .

    $default  reduce using rule 34 (primitive-lit)


State 39

   35 primitive-lit: LITSTR .

    $default  reduce using rule 35 (primitive-lit)


State 40

   36 name-binding: ID .
   41 exp: ID .
   75 function: ID . LPAREN exps RPAREN
   76         | ID . unit
   85 pat-enum: ID . DBLCOL ID LPAREN pats RPAREN
   86         | ID . DBLCOL ID
   89 pat-struct: ID . LBRACE id-pat-list RBRACE

    DBLCOL  shift, and go to state 89
    LPAREN  shift, and go to state 90
    LBRACE  shift, and go to state 91

    DBLARROW  reduce using rule 36 (name-binding)
    DBLARROW  [reduce using rule 41 (exp)]
    RBRACK    reduce using rule 36 (name-binding)
    RBRACK    [reduce using rule 41 (exp)]
    RPAREN    reduce using rule 36 (name-binding)
    RPAREN    [reduce using rule 41 (exp)]
    RBRACE    reduce using rule 36 (name-binding)
    RBRACE    [reduce using rule 41 (exp)]
    COMMA     reduce using rule 36 (name-binding)
    COMMA     [reduce using rule 41 (exp)]
    SEMI      reduce using rule 36 (name-binding)
    SEMI      [reduce using rule 41 (exp)]
    BAR       reduce using rule 36 (name-binding)
    BAR       [reduce using rule 41 (exp)]
    EQUAL     reduce using rule 36 (name-binding)
    EQUAL     [reduce using rule 41 (exp)]
    COLON     reduce using rule 36 (name-binding)
    COLON     [reduce using rule 41 (exp)]
    $default  reduce using rule 41 (exp)

    unit  go to state 92


State 41

   10 fn-def: FN ID LPAREN fn-params . RPAREN block
   11       | FN ID LPAREN fn-params . RPAREN SNGLARROW return block

    RPAREN  shift, and go to state 93


State 42

   12 fn-params: fn-param . COMMA fn-params
   13          | fn-param .

    COMMA  shift, and go to state 94

    $default  reduce using rule 13 (fn-params)


State 43

   14 fn-param: pat-type .

    $default  reduce using rule 14 (fn-param)


State 44

   24 pat-type: pat . COLON type

    COLON  shift, and go to state 95


State 45

   25 pat: primitive-lit .
  126 literal: primitive-lit .

    DBLARROW  reduce using rule 25 (pat)
    DBLARROW  [reduce using rule 126 (literal)]
    RBRACK    reduce using rule 25 (pat)
    RBRACK    [reduce using rule 126 (literal)]
    RPAREN    reduce using rule 25 (pat)
    RPAREN    [reduce using rule 126 (literal)]
    RBRACE    reduce using rule 25 (pat)
    RBRACE    [reduce using rule 126 (literal)]
    COMMA     reduce using rule 25 (pat)
    COMMA     [reduce using rule 126 (literal)]
    SEMI      reduce using rule 25 (pat)
    SEMI      [reduce using rule 126 (literal)]
    BAR       reduce using rule 25 (pat)
    BAR       [reduce using rule 126 (literal)]
    EQUAL     reduce using rule 25 (pat)
    EQUAL     [reduce using rule 126 (literal)]
    COLON     reduce using rule 25 (pat)
    COLON     [reduce using rule 126 (literal)]
    $default  reduce using rule 126 (literal)


State 46

   26 pat: name-binding .

    $default  reduce using rule 26 (pat)


State 47

   32 pat: exp .
   43 exp: exp . PLUS exp
   44    | exp . DASH exp
   45    | exp . ASTER exp
   46    | exp . SLASH exp
   47    | exp . PERCENT exp
   49    | exp . DBLAMP exp
   50    | exp . DBLBAR exp
   52    | exp . LTHAN exp
   53    | exp . GTHAN exp
   54    | exp . LEQTHAN exp
   55    | exp . GEQTHAN exp
   56    | exp . DBLEQ exp
   57    | exp . NOTEQ exp
   62    | exp . LBRACK exp RBRACK
   74 lookup: exp . PERIOD ID

    LBRACK   shift, and go to state 96
    DASH     shift, and go to state 97
    ASTER    shift, and go to state 98
    PLUS     shift, and go to state 99
    SLASH    shift, and go to state 100
    PERCENT  shift, and go to state 101
    DBLBAR   shift, and go to state 102
    DBLAMP   shift, and go to state 103
    DBLEQ    shift, and go to state 104
    NOTEQ    shift, and go to state 105
    LTHAN    shift, and go to state 106
    GTHAN    shift, and go to state 107
    LEQTHAN  shift, and go to state 108
    GEQTHAN  shift, and go to state 109
    PERIOD   shift, and go to state 110

    $default  reduce using rule 32 (pat)


State 48

   61 exp: lookup .
   73 lookup: lookup . PERIOD ID

    PERIOD  shift, and go to state 111

    PERIOD    [reduce using rule 61 (exp)]
    $default  reduce using rule 61 (exp)


State 49

   68 exp: function .

    $default  reduce using rule 68 (exp)


State 50

   27 pat: pat-deref .

    $default  reduce using rule 27 (pat)


State 51

   28 pat: pat-array .
  130 compound-lit: pat-array .

    DBLARROW  reduce using rule 28 (pat)
    DBLARROW  [reduce using rule 130 (compound-lit)]
    RBRACK    reduce using rule 28 (pat)
    RBRACK    [reduce using rule 130 (compound-lit)]
    RPAREN    reduce using rule 28 (pat)
    RPAREN    [reduce using rule 130 (compound-lit)]
    RBRACE    reduce using rule 28 (pat)
    RBRACE    [reduce using rule 130 (compound-lit)]
    COMMA     reduce using rule 28 (pat)
    COMMA     [reduce using rule 130 (compound-lit)]
    SEMI      reduce using rule 28 (pat)
    SEMI      [reduce using rule 130 (compound-lit)]
    BAR       reduce using rule 28 (pat)
    BAR       [reduce using rule 130 (compound-lit)]
    EQUAL     reduce using rule 28 (pat)
    EQUAL     [reduce using rule 130 (compound-lit)]
    COLON     reduce using rule 28 (pat)
    COLON     [reduce using rule 130 (compound-lit)]
    $default  reduce using rule 130 (compound-lit)


State 52

   64 exp: loop .

    $default  reduce using rule 64 (exp)


State 53

   29 pat: pat-enum .
  128 compound-lit: pat-enum .

    DBLARROW  reduce using rule 29 (pat)
    DBLARROW  [reduce using rule 128 (compound-lit)]
    RBRACK    reduce using rule 29 (pat)
    RBRACK    [reduce using rule 128 (compound-lit)]
    RPAREN    reduce using rule 29 (pat)
    RPAREN    [reduce using rule 128 (compound-lit)]
    RBRACE    reduce using rule 29 (pat)
    RBRACE    [reduce using rule 128 (compound-lit)]
    COMMA     reduce using rule 29 (pat)
    COMMA     [reduce using rule 128 (compound-lit)]
    SEMI      reduce using rule 29 (pat)
    SEMI      [reduce using rule 128 (compound-lit)]
    BAR       reduce using rule 29 (pat)
    BAR       [reduce using rule 128 (compound-lit)]
    EQUAL     reduce using rule 29 (pat)
    EQUAL     [reduce using rule 128 (compound-lit)]
    COLON     reduce using rule 29 (pat)
    COLON     [reduce using rule 128 (compound-lit)]
    $default  reduce using rule 128 (compound-lit)


State 54

   30 pat: pat-struct .
   70 exp: pat-struct .
  129 compound-lit: pat-struct .
